; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_anyauthput.c_my_ioctl.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_anyauthput.c_my_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4
@CURLIOE_FAILRESTART = common dso_local global i32 0, align 4
@CURLIOE_UNKNOWNCMD = common dso_local global i32 0, align 4
@CURLIOE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @my_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @my_ioctl(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %9, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  switch i32 %15, label %24 [
    i32 128, label %16
  ]

16:                                               ; preds = %3
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* @SEEK_SET, align 4
  %19 = call i32 @lseek(i32 %17, i32 0, i32 %18)
  %20 = icmp eq i32 -1, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %16
  %22 = load i32, i32* @CURLIOE_FAILRESTART, align 4
  store i32 %22, i32* %4, align 4
  br label %28

23:                                               ; preds = %16
  br label %26

24:                                               ; preds = %3
  %25 = load i32, i32* @CURLIOE_UNKNOWNCMD, align 4
  store i32 %25, i32* %4, align 4
  br label %28

26:                                               ; preds = %23
  %27 = load i32, i32* @CURLIOE_OK, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %26, %24, %21
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @lseek(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
